@@ -1,6 +1,9 @@
 menu (2.1.9-6) unstable; urgency=low
 
   * The "unreleased" release. 
+  * Morten Brix Pedersen:
+    - replacewith($str, $replace, $with) now outputs an error if $replace and
+    $with isn't the same length.
 
  -- Bill Allombert <ballombe@debian.org>  Sat, 24 Jan 2004 19:45:43 +0100
 
